@@ -1,0 +1,3 @@
+module check_tcp
+
+go 1.21
